progress mainly in chapter 2

--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -11,6 +11,9 @@
     \item [AST] Abstract Syntax Tree
     \item [DOM] Document Object Model
     \item [DSL] Domain-Specific Language
+    \item [ESB] Enterprise Service Bus
+    \item [JSON] JavaScript Object Notation
+    \item [MDA] Model-Driver Architecture
     \item [OOP] Objektově Oriented Programming (Objektově orientované programování)
     \item [REST] Representational State Transfer
     \item [RPC] Remote Procedure Call
