--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -92,7 +92,7 @@ Vzhledem k požadavkům na implementaci našeho frameworku stanoveným
 v předchozí kapitole~\ref{ch:analyza} se AOP a na něm stavějící ADDA
 jeví jako vhodný přístup, který nám pomůže dosáhnout cíle.
 
-\section{Stávající řešení reprezentace byznys pravidel}
+\section{Stávající řešení reprezentace   business pravidel}
 
 \subsection{Drools DSL}
 
