--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -26,3 +26,8 @@
 \section{Byznys kontext weaver}
 
 \section{Centrální správa byznys kontextů}
+
+\subsection{Uložení rozšířeného pravidla}
+
+\goal{Diskutovat chaining vs. direct update}
+% TODO: napiš mě
