--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -66,4 +66,9 @@ floatplacement=H
 
 \subsection{Nasazení systému pro centrální správu byznys kontextů}
 
+\subsection{Orchestrace služeb}
+
+\goal{Spouštění pomocí Docker}
+~\cite{merkel2014docker}
+
 \section{Shrnutí}
