--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -1,6 +1,9 @@
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+
 %!TEX ROOT=../diploma-thesis.tex
 
-\chapter{Z\'av\v er}\label{ch:zaver}
+\chapter{Závěr}\label{ch:zaver}
 
 \section{Analýza dopadu použití frameworku}
 
@@ -10,4 +13,19 @@
 
 \section{Další možnosti uplatnění AOP v SOA}
 
+\todo{
+\begin{itemize}
+    \item{Extrakce dokumentace}
+    \item{Extrakce byznysového modelu}
+    \item{Konfigurace prostředí}
+\end{itemize}
+}
+
 \section{Shrnutí}
+
+\todo{
+\begin{itemize}
+    \item{Dosáhli jsme cílů práce}
+    \item{Stručné shrnutí co všechno a jak jsme udělali}
+\end{itemize}
+}
