--- a/reference.bib
+++ b/reference.bib
@@ -193,3 +193,41 @@
     year={2002},
     publisher={IEEE}
 }
+
+@article{sprott2004understanding,
+    title={Understanding service-oriented architecture},
+    author={Sprott, David and Wilkes, Lawrence},
+    journal={The Architecture Journal},
+    volume={1},
+    number={1},
+    pages={10--17},
+    year={2004},
+    publisher={MSDN Library, Microsoft Corporation}
+}
+
+@article{merkel2014docker,
+    title={Docker: lightweight linux containers for consistent development and deployment},
+    author={Merkel, Dirk},
+    journal={Linux Journal},
+    volume={2014},
+    number={239},
+    pages={2},
+    year={2014},
+    publisher={Belltown Media}
+}
+
+@article{lewis2014microservices,
+    title={Microservices: a definition of this new architectural term},
+    author={Lewis, James and Fowler, Martin},
+    journal={MartinFowler. com},
+    volume={25},
+    year={2014}
+}
+
+@book{fowler2002patterns,
+    title={Patterns of enterprise application architecture},
+    author={Fowler, Martin},
+    year={2002},
+    publisher={Addison-Wesley Longman Publishing Co., Inc.},
+    address = {Boston, Massachusetts, USA},
+}
