--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -9,15 +9,20 @@
     \item [ADDA] Aspect-Driven Design Approach
     \item [API] Application Programming Interface
     \item [AST] Abstract Syntax Tree
+    \item [CORBA] Common Object Request Broker Architecture
     \item [DOM] Document Object Model
     \item [DSL] Domain-Specific Language
     \item [ESB] Enterprise Service Bus
+    \item [HTTP] Hypertext Transfer Protocol
     \item [JSON] JavaScript Object Notation
     \item [MDA] Model-Driver Architecture
+    \item [ORB] Object Request Broker
     \item [OOP] Objektově Oriented Programming (Objektově orientované programování)
     \item [REST] Representational State Transfer
     \item [RPC] Remote Procedure Call
     \item [SOA] Service Oriented Architecture
+    \item [SOAP] Simple Object Access Protocol
+    \item [WSDL] Web Service Description Language
     \item [XML] Extensible Markup Language
     \item [XSD] XML Schema Definition
 \end{description}
