--- a/reference.bib
+++ b/reference.bib
@@ -13,12 +13,12 @@
 }
 
 @inproceedings{cerny2017disambiguation,
-    title={Disambiguation and Comparison of SOA, Microservices and Self-Contained Systems},
-    author={Cerny, Tomas and Donahoo, Michael J and Pechanec, Jiri},
-    booktitle={Proceedings of the International Conference on Research in Adaptive and Convergent Systems},
-    pages={228--235},
-    year={2017},
-    organization={ACM}
+    title = {Disambiguation and Comparison of SOA, Microservices and Self-Contained Systems},
+    author = {Cerny, Tomas and Donahoo, Michael J and Pechanec, Jiri},
+    booktitle = {Proceedings of the International Conference on Research in Adaptive and Convergent Systems},
+    pages = {228--235},
+    year = {2017},
+    organization = {ACM}
 }
 
 @article{rentsch1982object,
@@ -169,65 +169,95 @@
 }
 
 @article{fowler2005serviceorientedambiguity,
-    title={ServiceOrientedAmbiguity},
-    author={Fowler, Martin},
-    journal={Martin Fowler--Bliki},
-    volume={1},
-    year={2005}
+    title = {ServiceOrientedAmbiguity},
+    author = {Fowler, Martin},
+    journal = {Martin Fowler--Bliki},
+    volume = {1},
+    year = {2005}
 }
 
 @article{fielding2000rest,
-    title={REST: architectural styles and the design of network-based software architectures},
-    author={Fielding, Roy Thomas},
-    journal={Doctoral dissertation, University of California},
-    year={2000}
+    title = {REST: architectural styles and the design of network-based software architectures},
+    author = {Fielding, Roy Thomas},
+    journal = {Doctoral dissertation, University of California},
+    year = {2000}
 }
 
 @article{curbera2002unraveling,
-    title={Unraveling the Web services web: an introduction to SOAP, WSDL, and UDDI},
-    author={Curbera, Francisco and Duftler, Matthew and Khalaf, Rania and Nagy, William and Mukhi, Nirmal and Weerawarana, Sanjiva},
-    journal={IEEE Internet computing},
-    volume={6},
-    number={2},
-    pages={86--93},
-    year={2002},
-    publisher={IEEE}
+    title = {Unraveling the Web services web: an introduction to SOAP, WSDL, and UDDI},
+    author = {Curbera, Francisco and Duftler, Matthew and Khalaf, Rania and Nagy, William and Mukhi, Nirmal and Weerawarana, Sanjiva},
+    journal = {IEEE Internet computing},
+    volume = {6},
+    number = {2},
+    pages = {86--93},
+    year = {2002},
+    publisher = {IEEE}
 }
 
 @article{sprott2004understanding,
-    title={Understanding service-oriented architecture},
-    author={Sprott, David and Wilkes, Lawrence},
-    journal={The Architecture Journal},
-    volume={1},
-    number={1},
-    pages={10--17},
-    year={2004},
-    publisher={MSDN Library, Microsoft Corporation}
+    title = {Understanding service-oriented architecture},
+    author = {Sprott, David and Wilkes, Lawrence},
+    journal = {The Architecture Journal},
+    volume = {1},
+    number = {1},
+    pages = {10--17},
+    year = {2004},
+    publisher = {MSDN Library, Microsoft Corporation}
 }
 
 @article{merkel2014docker,
-    title={Docker: lightweight linux containers for consistent development and deployment},
-    author={Merkel, Dirk},
-    journal={Linux Journal},
-    volume={2014},
-    number={239},
-    pages={2},
-    year={2014},
-    publisher={Belltown Media}
+    title = {Docker: lightweight linux containers for consistent development and deployment},
+    author = {Merkel, Dirk},
+    journal = {Linux Journal},
+    volume = {2014},
+    number = {239},
+    pages = {2},
+    year = {2014},
+    publisher = {Belltown Media}
 }
 
 @article{lewis2014microservices,
-    title={Microservices: a definition of this new architectural term},
-    author={Lewis, James and Fowler, Martin},
-    journal={MartinFowler. com},
-    volume={25},
-    year={2014}
+    title = {Microservices: a definition of this new architectural term},
+    author = {Lewis, James and Fowler, Martin},
+    journal = {MartinFowler. com},
+    volume = {25},
+    year = {2014}
 }
 
 @book{fowler2002patterns,
-    title={Patterns of enterprise application architecture},
-    author={Fowler, Martin},
-    year={2002},
-    publisher={Addison-Wesley Longman Publishing Co., Inc.},
+    title = {Patterns of enterprise application architecture},
+    author = {Fowler, Martin},
+    year = {2002},
+    publisher = {Addison-Wesley Longman Publishing Co., Inc.},
     address = {Boston, Massachusetts, USA},
+}
+
+@book{siegel2000corba,
+    title = {CORBA 3 fundamentals and programming},
+    author = {Siegel, Jon and Frantz, Dan},
+    volume = {2},
+    year = {2000},
+    publisher = {John Wiley \& Sons},
+    address = {New York, NY, USA},
+}
+
+@misc{box2000simple,
+    title = {Simple object access protocol (SOAP) 1.1},
+    author = {Box, Don and Ehnebuske, David and Kakivaya, Gopal and Layman, Andrew and Mendelsohn, Noah and Nielsen, Henrik Frystyk and Thatte, Satish and Winer, Dave},
+    year = {2000}
+}
+
+@misc{christensen2001web,
+    title = {Web services description language (WSDL) 1.1},
+    author = {Christensen, Erik and Curbera, Francisco and Meredith, Greg and Weerawarana, Sanjiva and others},
+    year = {2001},
+    publisher = {Citeseer}
+}
+
+@book{chappell2004enterprise,
+    title = {Enterprise service bus},
+    author = {Chappell, David},
+    year = {2004},
+    publisher = {O'Reilly Media, Inc.},
+    address = {Newton, Massachusetts, USA},
 }
