changes here and there, progress in chapter 2

--- a/content/appendix-C-zkratky.tex
+++ b/content/appendix-C-zkratky.tex
@@ -14,6 +14,7 @@
     \item [DSL] Domain-Specific Language
     \item [ESB] Enterprise Service Bus
     \item [HTTP] Hypertext Transfer Protocol
+    \item [IDL] Interface Description Language
     \item [JSON] JavaScript Object Notation
     \item [MDA] Model-Driver Architecture
     \item [ORB] Object Request Broker
