--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -1,3 +1,35 @@
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+
 %!TEX ROOT=../diploma-thesis.tex
 
 \chapter{Úvod}\label{ch:uvod}
+
+\todo{
+\begin{itemize}
+    \item popis tématu a jeho důležitost
+    \item motivace práce
+    \item co bude cílem a požadovaným výstupem této práce
+    \item popis struktury DP
+\end{itemize}
+}
+
+\section{Jak číst tuto práci}
+
+\goal{Popis struktury DP a obsah kapitol}
+Kapitola~\ref{ch:analyza} se venuje detailní analýze problematiky bynysových pravidel a
+architektury orientované na služby, včetně jejího historického vývoje až po nejnovější trendy
+a v závěru identifikuje požadavky kladené na implementaci knihovny pro centrální správu a
+automatickou distribuci byznysových pravidel v této architektuře. Kapitola~\ref{ch:reserse}
+se zabývá rešerší stávajících prístupu k vývoji informacních systému a speciálně se zaměřuje
+na koncepty aspektově orientovaného programování a moderního aspekty řízeného přístupu k návrhu
+systémů. Dále se kapitola věnuje průzkumu existujících nástrojů pro správu byznysových pravidel.
+Kapitola~\ref{ch:navrh} formalizuje prostředí architektury orientované na služby do terminologie
+aspektově orientovaného programování a na základě této formalizace navrhuje koncept frameworku,
+který realizuje centrální správu a automatickou distribuci byznysových pravidel.
+V kapitole~\ref{ch:implementace} je detailně probrána implementace knihoven pro navržený framework
+pro platformy jazyků Java a Python a ekosystému Node.js. Následující kapitola~\ref{ch:verifikace}
+popisuje, jakým způsobem byly tyto knihovny otestovány a jak byla prokázána jejich funkčnost. Zároveň
+je zde popsána validace a vyhodnocení konceptu frameworku jeho nasazením při vývoji
+jednoduchého ukázkového e-commerce systému. V poslední kapitole~\ref{ch:zaver} je shrnuto, jakých
+cílů bylo v práci dosáhnuto a jakým dalším směrem se může výzkum v této oblasti ubírat.
