--- a/content/chapter-03-reserse.tex
+++ b/content/chapter-03-reserse.tex
@@ -7,9 +7,26 @@
 
 \section{Modelem řízená architektura}
 
+\todo{
+\begin{itemize}
+    \item Co to je MDA
+    \item Výhody
+    \item Nevýhody
+    \item Shrnutí a proč se nám nehodí
+\end{itemize}
+}
+
 \section{Architektura klient-server}\label{sec:client-server}
 
-~\cite{berson1992client}
+\todo{
+\begin{itemize}
+    \item Co to je
+    \item Výhody
+    \item Nevýhody
+    \item Shrnutí a proč se nám hodí
+    \item Citovat ~\cite{berson1992client}
+\end{itemize}
+}
 
 \section{Aspektově orientované programování}
 
@@ -69,9 +86,14 @@ V ideálním případě je tedy k návrhu systému využita kombinace
 AOP s jiným paradigmatem. Pro účely této práce se zaměříme na
 kombinaci AOP a OOP.
 
-% TODO: diagram cross cutting concerns
-% TODO: rozáhnout do více odstavců
-% TODO: diagram weaveru
+\todo{
+\begin{itemize}
+    \item diagram cross cutting concerns
+    \item roztáhnout do více odstavců
+    \item diagram weaveru
+    \item section BPEL
+\end{itemize}
+}
 
 \begin{description}
     \item [Aspekt]
@@ -81,28 +103,55 @@ kombinaci AOP a OOP.
     \item [Weaving]
 \end{description}
 
-% TODO: \section{BPEL}
-
 \section{Aspect-driven Design Approach}
+
+\todo{
+\begin{itemize}
+    \item co to je
+    \item jak nám to pomůže
+    \item využítí jeho konceptů
+    \item shrnutí
+\end{itemize}
+}
 
 Aspect-driven Design Approach (ADDA)
 
-% Vhodnost AOP pro náš úkol
+\goal{Vhodnost AOP pro náš úkol}
 Vzhledem k požadavkům na implementaci našeho frameworku stanoveným
 v předchozí kapitole~\ref{ch:analyza} se AOP a na něm stavějící ADDA
 jeví jako vhodný přístup, který nám pomůže dosáhnout cíle.
 
-\section{Stávající řešení reprezentace   business pravidel}
+\section{Stávající řešení reprezentace business pravidel}
 
 \subsection{Drools DSL}
 
+\todo{
+\begin{itemize}
+    \item co to je
+    \item jak to funguje
+    \item výhody
+    \item nevýhody
+    \item shrnutí a proč se nám nehodí
+\end{itemize}
+}
+
 \goal{Drools se nám nehodí, protože je jen pro platformu Java}
-% TODO: dopiš mě
+...
 
 \subsection{JetBrains MPS}
 
+\todo{
+\begin{itemize}
+    \item co to je
+    \item jak to funguje
+    \item výhody
+    \item nevýhody
+    \item shrnutí a proč se nám nehodí
+\end{itemize}
+}
+
 \goal{MPS je super, ale nevyhovuje nám kvůli dynamickým změnám}
-% TODO: dopiš mě
+...
 
 \section{Shrnutí}
 
