--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -31,3 +31,7 @@
 
 \goal{Diskutovat chaining vs. direct update}
 % TODO: napiš mě
+
+\section{Service discovery}
+
+\goal{Popsat nezávislost na service discovery}
