--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -5,7 +5,7 @@
 
 \chapter{Verifikace a validace}\label{ch:verifikace}
 
-V této kapitole %TODO: co tady?
+V této kapitole ... %TODO: co tady?
 
 \section{Testování prototypů knihoven}
 
