--- a/reference.bib
+++ b/reference.bib
@@ -261,3 +261,120 @@
     publisher = {O'Reilly Media, Inc.},
     address = {Newton, Massachusetts, USA},
 }
+
+@inproceedings{maeda2012performance,
+    title = {Performance evaluation of object serialization libraries in XML, JSON and binary formats},
+    author = {Maeda, Kazuaki},
+    booktitle = {Digital Information and Communication Technology and it's Applications (DICTAP), 2012 Second International Conference on},
+    pages = {177--182},
+    year = {2012},
+    organization = {IEEE}
+}
+
+@online{githut,
+    key = {Programming Languages and GitHub},
+    title = {Programming Languages and GitHub},
+    url = {http://githut.info/},
+    year = {2014},
+    urldate = {2018-04-12},
+}
+
+@online{octoverse,
+    key = {GitHub Octoverse 2017},
+    title = {GitHub Octoverse 2017},
+    url = {https://octoverse.github.com/},
+    year = {2017},
+    urldate = {2018-04-12},
+}
+
+@online{stackoverflowsurvey,
+    key = {Stack Overflow Developer Survey 2017},
+    title = {Stack Overflow Developer Survey 2017},
+    url = {https://insights.stackoverflow.com/survey/2017\#technology},
+    year = {2017},
+    urldate = {2018-04-12},
+}
+
+@online{protobuf,
+    key = {Protocol Buffers | Google Developers},
+    title = {Protocol Buffers | Google Developers},
+    url = {https://developers.google.com/protocol-buffers/},
+    urldate = {2018-04-12},
+}
+
+@online{thrift,
+    key = {Apache Thrift - Home},
+    title = {Apache Thrift - Home},
+    url = {https://thrift.apache.org/},
+    urldate = {2018-04-12},
+}
+
+@online{avro,
+    key = {Welcome to Apache Avro!},
+    title = {Welcome to Apache Avro!},
+    url = {https://avro.apache.org/},
+    urldate = {2018-04-12},
+}
+
+@online{grpcio,
+    key = {gRPC open-source universal RPC framework},
+    title = {gRPC open-source universal RPC framework},
+    url = {https://grpc.io/},
+    urldate = {2018-04-12},
+}
+
+@online{jdom2,
+    key = {JDOM},
+    title = {JDOM},
+    url = {http://www.jdom.org/},
+    urldate = {2018-04-12},
+}
+
+@online{pip,
+    key = {pip - pip 9.0.3 documentation},
+    title = {pip - pip 9.0.3 documentation},
+    url = {https://pip.pypa.io/en/stable/},
+    urldate = {2018-04-12},
+}
+
+@online{ecma60,
+    key = {ECMAScript® 2015 Language Specification - Ecma-262 6th Edition},
+    title = {ECMAScript® 2015 Language Specification - Ecma-262 6th Edition},
+    url = {http://www.ecma-international.org/ecma-262/6.0/},
+    urldate = {2018-04-12},
+}
+
+@online{mitlicense,
+    key = {What is the MIT license? -- definition by The Linux Information Project (LINFO)},
+    title = {What is the MIT license? -- definition by The Linux Information Project (LINFO)},
+    url = {http://www.linfo.org/mitlicense.html},
+    urldate = {2018-04-12},
+}
+
+@online{yarnpkg,
+    key = {Fast, reliable, and secure dependency management.},
+    title = {Fast, reliable, and secure dependency management.},
+    url = {https://yarnpkg.com/en/},
+    urldate = {2018-04-12},
+}
+
+@online{rimraf,
+    key = {isaacs/rimraf},
+    title = {isaacs/rimraf},
+    url = {https://github.com/isaacs/rimraf},
+    urldate = {2018-04-12},
+}
+
+@online{babel,
+    key = {Babel · The compiler for writing next generation JavaScript},
+    title = {Babel · The compiler for writing next generation JavaScript},
+    url = {https://babeljs.io/},
+    urldate = {2018-04-12},
+}
+
+@online{nginx2015fourtier,
+    title = {It’s Time to Move to a Four‑Tier Application Architecture},
+    url = {https://www.nginx.com/blog/time-to-move-to-a-four-tier-application-architecture/},
+    urldate = {2018-04-12},
+    author = {Patrick Nommensen}
+}
